bindings/RosuFFI.h

typedef struct ScoreState ScoreState;
typedef struct ManiaDifficultyAttributes ManiaDifficultyAttributes;
typedef struct Performance Performance;
typedef struct CatchDifficultyAttributes CatchDifficultyAttributes;
typedef struct DifficultyAttributes DifficultyAttributes;
typedef struct TaikoDifficultyAttributes TaikoDifficultyAttributes;
typedef struct GradualPerformance GradualPerformance;
typedef struct Beatmap Beatmap;
typedef struct OsuDifficultyAttributes OsuDifficultyAttributes;
typedef struct Option_u32 Option_u32;
struct ManiaDifficultyAttributes {
    double stars;
    uint32_t n_objects;
    uint32_t n_hold_notes;
    uint32_t max_combo;
    bool is_convert;
};
struct CatchDifficultyAttributes {
    double stars;
    double preempt;
    uint32_t n_fruits;
    uint32_t n_droplets;
    uint32_t n_tiny_droplets;
    bool is_convert;
};
typedef enum OsuScoreOrigin {
    OSUSCOREORIGIN_STABLE = 0,
    OSUSCOREORIGIN_WITHSLIDERACC = 1,
    OSUSCOREORIGIN_WITHOUTSLIDERACC = 2,
} OsuScoreOrigin;
struct TaikoDifficultyAttributes {
    double stamina;
    double rhythm;
    double color;
    double reading;
    double great_hit_window;
    double ok_hit_window;
    double mono_stamina_factor;
    double mechanical_difficulty;
    double consistency_factor;
    double stars;
    uint32_t max_combo;
    bool is_convert;
};
struct OsuDifficultyAttributes {
    double aim;
    double aim_difficult_slider_count;
    double speed;
    double flashlight;
    double reading;
    double slider_factor;
    double aim_top_weighted_slider_factor;
    double speed_top_weighted_slider_factor;
    double speed_note_count;
    double aim_difficult_strain_count;
    double speed_difficult_strain_count;
    double reading_difficult_note_count;
    double nested_score_per_object;
    double legacy_score_base_multiplier;
    double maximum_legacy_combo_score;
    double ar;
    double great_hit_window;
    double ok_hit_window;
    double meh_hit_window;
    double hp;
    uint32_t n_circles;
    uint32_t n_sliders;
    uint32_t n_large_ticks;
    uint32_t n_spinners;
    double stars;
    uint32_t max_combo;
};
struct Option_u32 { uint32_t variant; uint32_t some; };
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
struct DifficultyAttributes {
    uint32_t variant;
    union {
        OsuDifficultyAttributes osu;
        TaikoDifficultyAttributes taiko;
        CatchDifficultyAttributes catch_;
        ManiaDifficultyAttributes mania;
    } payload;
};
void gradual_performance_destroy(const GradualPerformance * instance);
float beatmap_ar(Beatmap * instance);
double calculate_accuacy(const ScoreState * state, const DifficultyAttributes * difficulty, OsuScoreOrigin origin);
void performance_accuracy(Performance * instance, double accuracy);
void performance_misses(Performance * instance, uint32_t misses);
double beatmap_slider_tick_rate(Beatmap * instance);
bool beatmap_is_convert(Beatmap * instance);