JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_performance_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void gradual_performance_destroy(const GradualPerformance *instance)
     * }
     */
    public static FunctionDescriptor gradual_performance_destroy$descriptor() {
        return gradual_performance_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void gradual_performance_destroy(const GradualPerformance *instance)
     * }
     */
    public static MethodHandle gradual_performance_destroy$handle() {
        return gradual_performance_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void gradual_performance_destroy(const GradualPerformance *instance)
     * }
     */
    public static MemorySegment gradual_performance_destroy$address() {
        return gradual_performance_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void gradual_performance_destroy(const GradualPerformance *instance)
     * }
     */
    public static void gradual_performance_destroy(MemorySegment instance) {
        var mh$ = gradual_performance_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_performance_destroy", instance);
            }
            mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_ar {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_FLOAT,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_ar").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float beatmap_ar(Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_ar$descriptor() {
        return beatmap_ar.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float beatmap_ar(Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_ar$handle() {
        return beatmap_ar.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float beatmap_ar(Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_ar$address() {
        return beatmap_ar.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float beatmap_ar(Beatmap *instance)
     * }
     */
    public static float beatmap_ar(MemorySegment instance) {
        var mh$ = beatmap_ar.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_ar", instance);
            }
            return (float)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class calculate_accuacy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_DOUBLE,
            RosuNative.C_POINTER,
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("calculate_accuacy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * double calculate_accuacy(const ScoreState *state, const DifficultyAttributes *difficulty, OsuScoreOrigin origin)
     * }
     */
    public static FunctionDescriptor calculate_accuacy$descriptor() {
        return calculate_accuacy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * double calculate_accuacy(const ScoreState *state, const DifficultyAttributes *difficulty, OsuScoreOrigin origin)
     * }
     */
    public static MethodHandle calculate_accuacy$handle() {
        return calculate_accuacy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * double calculate_accuacy(const ScoreState *state, const DifficultyAttributes *difficulty, OsuScoreOrigin origin)
     * }
     */
    public static MemorySegment calculate_accuacy$address() {
        return calculate_accuacy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * double calculate_accuacy(const ScoreState *state, const DifficultyAttributes *difficulty, OsuScoreOrigin origin)
     * }
     */
    public static double calculate_accuacy(MemorySegment state, MemorySegment difficulty, int origin) {
        var mh$ = calculate_accuacy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("calculate_accuacy", state, difficulty, origin);
            }
            return (double)mh$.invokeExact(state, difficulty, origin);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_accuracy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_accuracy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_accuracy(Performance *instance, double accuracy)
     * }
     */
    public static FunctionDescriptor performance_accuracy$descriptor() {
        return performance_accuracy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_accuracy(Performance *instance, double accuracy)
     * }
     */
    public static MethodHandle performance_accuracy$handle() {
        return performance_accuracy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_accuracy(Performance *instance, double accuracy)
     * }
     */
    public static MemorySegment performance_accuracy$address() {
        return performance_accuracy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_accuracy(Performance *instance, double accuracy)
     * }
     */
    public static void performance_accuracy(MemorySegment instance, double accuracy) {
        var mh$ = performance_accuracy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_accuracy", instance, accuracy);
            }
            mh$.invokeExact(instance, accuracy);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_misses {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_misses").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_misses(Performance *instance, uint32_t misses)
     * }
     */
    public static FunctionDescriptor performance_misses$descriptor() {
        return performance_misses.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_misses(Performance *instance, uint32_t misses)
     * }
     */
    public static MethodHandle performance_misses$handle() {
        return performance_misses.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_misses(Performance *instance, uint32_t misses)
     * }
     */
    public static MemorySegment performance_misses$address() {
        return performance_misses.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_misses(Performance *instance, uint32_t misses)
     * }
     */
    public static void performance_misses(MemorySegment instance, int misses) {
        var mh$ = performance_misses.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_misses", instance, misses);
            }
            mh$.invokeExact(instance, misses);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_slider_tick_rate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_DOUBLE,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_slider_tick_rate").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * double beatmap_slider_tick_rate(Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_slider_tick_rate$descriptor() {
        return beatmap_slider_tick_rate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * double beatmap_slider_tick_rate(Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_slider_tick_rate$handle() {
        return beatmap_slider_tick_rate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * double beatmap_slider_tick_rate(Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_slider_tick_rate$address() {
        return beatmap_slider_tick_rate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * double beatmap_slider_tick_rate(Beatmap *instance)
     * }
     */
    public static double beatmap_slider_tick_rate(MemorySegment instance) {
        var mh$ = beatmap_slider_tick_rate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_slider_tick_rate", instance);
            }
            return (double)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_is_convert {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_BOOL,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_is_convert").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool beatmap_is_convert(Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_is_convert$descriptor() {
        return beatmap_is_convert.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool beatmap_is_convert(Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_is_convert$handle() {
        return beatmap_is_convert.HANDLE;
    }
